<resources>
    <string name="app_name">NetWatch Pro</string>
    <string name="title_activity_initial_screen">InitialScreen</string>
    <string name="notifications">Notifications</string>
    <string name="seconds_ago">second(s) ago</string>
    <string name="minutes_ago">minute(s) ago</string>
    <string name="hours_ago">hour(s) ago</string>
    <string name="days_ago">day(s) ago</string>
    <string name="you_are_protected">Protected</string>
    <string name="you_are_not_protected">Exposed</string>
    <string name="last_check">Last Check:</string>
    <string name="scan_your_apps">Scan your Apps</string>
    <string name="full_scan_your_apps">Full Scan your Apps</string>
    <string name="scan_your_apps_subtext">Do a quick check of your apps</string>
    <string name="full_scan_your_apps_subtext">Do a full audit of your applications</string>
    <string name="vpn">VPN</string>
    <string name="vpn_subtext">Stay protected in real-time by enabling the VPN feature now built into the app, and let us manage your risk for you</string>
    <string name="our_server_status">Our Server Status</string>
    <string name="last_scans">Last Scans</string>
    <string name="see_all_scans">See all scans</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="settings">Settings</string>
    <string name="serres">Serres</string>
    <string name="running">Running</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="modal_sheet_terms_of_use_first_main_text">These Terms of Use ("Terms") govern your use of the "NetWatch Pro" application ("App"), provided to you by the International Hellenic University ("University" or "we"). By installing, accessing, or using the App, you agree to comply with and be bound by these Terms. If you do not agree with these Terms, please do not use the App.</string>
    <string name="modal_sheet_terms_of_use_acceptance_of_terms">1. Acceptance of Terms</string>
    <string name="modal_sheet_terms_of_use_acceptance_of_terms_main_text">You must read, understand, and agree to these Terms before using the App. Your use of the App constitutes your acceptance of these Terms and your agreement to be bound by them.</string>
    <string name="modal_sheet_terms_of_use_app_description">2. App Description</string>
    <string name="modal_sheet_terms_of_use_app_description_main_text">NetWatch Pro is a mobile application designed to scan and analyze installed apps on your device for potential malware and to monitor internet traffic for suspicious IP packages.</string>
    <string name="modal_sheet_terms_of_use_user_responsibilities">3. User Responsibilities</string>
    <string name="modal_sheet_terms_of_use_user_responsibilities_main_text_section_a">a. Malware Scanning: You acknowledge that the App\'s malware scanning capabilities are based on available data and heuristics and may not guarantee the detection of all malware. You are responsible for keeping your device and its applications up-to-date and secure.</string>
    <string name="modal_sheet_terms_of_use_user_responsibilities_main_text_section_b">b. Internet Traffic Analysis: The App provides information about internet traffic on your device. You are solely responsible for interpreting and taking action based on this information. The App does not guarantee the accuracy or completeness of the data it provides.</string>
    <string name="modal_sheet_terms_of_use_user_responsibilities_main_text_section_c">c. Privacy: The App may require access to certain device permissions and data to function properly. Please review our Privacy Policy to understand how we collect, use, and protect your data.</string>
    <string name="modal_sheet_terms_of_use_use_restrictions">4. Use Restrictions</string>
    <string name="modal_sheet_terms_of_use_use_restrictions_subtext">You agree not to:</string>
    <string name="modal_sheet_terms_of_use_use_restrictions_main_text_section_a">a. Use the App for any unlawful or unauthorized purpose.</string>
    <string name="modal_sheet_terms_of_use_use_restrictions_main_text_section_b">b. Attempt to disrupt or interfere with the proper functioning of the App.</string>
    <string name="modal_sheet_terms_of_use_use_restrictions_main_text_section_c">c. Reverse engineer, decompile, or attempt to extract the source code of the App.</string>
    <string name="modal_sheet_terms_of_use_intellectual_property">5. Intellectual Property</string>
    <string name="modal_sheet_terms_of_use_intellectual_property_main_text">All intellectual property rights in the App, including but not limited to copyrights, trademarks, and trade secrets, are owned by the University. You may not use, reproduce, or distribute any part of the App without our prior written consent.</string>
    <string name="modal_sheet_terms_of_use_disclaimer_of_warranty">6. Disclaimer of Warranty</string>
    <string name="modal_sheet_terms_of_use_disclaimer_of_warranty_main_text">The App is provided "as is" and "as available" without warranties of any kind, whether express or implied. The University does not warrant that the App will be error-free or uninterrupted.</string>
    <string name="modal_sheet_terms_of_use_limitation_of_liability">7. Limitation of Liability</string>
    <string name="modal_sheet_terms_of_use_limitation_of_liability_main_text">To the fullest extent permitted by applicable law, the University shall not be liable for any direct, indirect, incidental, special, consequential, or punitive damages, or any loss of profits or revenues, arising out of or related to your use or inability to use the App.</string>
    <string name="modal_sheet_terms_of_use_changes_to_terms">8. Changes to Terms</string>
    <string name="modal_sheet_terms_of_use_changes_to_terms_main_text">The University reserves the right to modify or update these Terms at any time. It is your responsibility to review these Terms periodically. Your continued use of the App after changes to the Terms are made constitutes acceptance of the updated Terms.</string>
    <string name="modal_sheet_terms_of_use_governing_law">9. Governing Law</string>
    <string name="modal_sheet_terms_of_use_governing_law_main_text">These Terms are governed by and construed in accordance with the laws of GNU, without regard to its conflict of law principles.</string>
    <string name="modal_sheet_terms_of_use_contact_information">10. Contact Information</string>
    <string name="modal_sheet_terms_of_use_contact_information_main_text">If you have any questions or concerns about these Terms or the App, please contact us at info@ict.ihu.gr.</string>
    <string name="modal_sheet_terms_of_use_final_line">By using the "NetWatch Pro" App, you acknowledge that you have read, understood, and agreed to these Terms of Use. If you do not agree with any part of these Terms, please do not use the App.</string>
    <string name="modal_sheet_privacy_policy_first_main_text">This Privacy Policy ("Policy") explains how "NetWatch Pro" collects, uses, and safeguards your personal information when you use the "NetWatch Pro" mobile application ("App"). By installing, accessing, or using the App, you consent to the practices described in this Policy.</string>
    <string name="modal_sheet_privacy_policy_information_we_collect">1. Information We Collect</string>
    <string name="modal_sheet_privacy_policy_personal_information">a. Personal Information</string>
    <string name="modal_sheet_privacy_policy_collecting_types">We may collect the following types of personal information:</string>
    <string name="modal_sheet_privacy_policy_device_information">Device Information: We may collect information about your mobile device, including device model, operating system, and unique device identifiers.</string>
    <string name="modal_sheet_privacy_policy_usage_data">Usage Data: We may collect data on how you use the App, including app features and functions you access, as well as your interactions with the App.</string>
    <string name="modal_sheet_privacy_policy_data_collected_for_app_functionality">b. Data Collected for App Functionality</string>
    <string name="modal_sheet_privacy_policy_request_access">The App may request access to the following device permissions and data to provide its functionality:</string>
    <string name="modal_sheet_privacy_policy_internet_access">Internet Access: The App may require internet access to analyze internet traffic and detect suspicious IP packages.</string>
    <string name="modal_sheet_privacy_policy_app_permissions">App Permissions: The App may request access to certain device permissions, such as storage access, to perform malware scanning.</string>
    <string name="modal_sheet_privacy_policy_how_we_use_your_information">2. How We Use Your Information</string>
    <string name="modal_sheet_privacy_policy_use_information_purposes">We may use your information for the following purposes:</string>
    <string name="modal_sheet_privacy_policy_provide_and_maintain_app">To provide and maintain the App\'s functionality.</string>
    <string name="modal_sheet_privacy_policy_detect_and_report_malware">To detect and report on potential malware in installed applications on your device.</string>
    <string name="modal_sheet_privacy_policy_analyze_internet_access">To analyze internet traffic and identify suspicious IP packages.</string>
    <string name="modal_sheet_privacy_policy_improve_and_enhance_performance">To improve and enhance the performance and features of the App.</string>
    <string name="modal_sheet_privacy_policy_data_security">3. Data Security</string>
    <string name="modal_sheet_privacy_policy_data_security_main_text">We take reasonable measures to protect your personal information from unauthorized access, disclosure, alteration, or destruction. However, please be aware that no method of transmitting data over the internet or storing data is completely secure, and we cannot guarantee the absolute security of your data.</string>
    <string name="modal_sheet_privacy_policy_third_party_services">4. Third-Party Services</string>
    <string name="modal_sheet_privacy_policy_third_party_services_main_text">The App may include links to third-party websites, services, or content. We do not control these third-party services and are not responsible for their privacy practices. We encourage you to review the privacy policies of these third-party services before interacting with them.</string>
    <string name="modal_sheet_privacy_policy_children_privacy">5. Children\'s Privacy</string>
    <string name="modal_sheet_privacy_policy_children_privacy_main_text">The App is not intended for use by children under the age of 13. We do not knowingly collect personal information from children under 13. If you believe that we have unintentionally collected personal information from a child under 13, please contact us immediately.</string>
    <string name="modal_sheet_privacy_policy_changes_to_this_privacy_policy">6. Changes to this Privacy Policy</string>
    <string name="modal_sheet_privacy_policy_changes_to_this_privacy_policy_main_text">We may update this Privacy Policy to reflect changes to our data practices. We will notify you of any changes by posting the updated Policy in the App. Your continued use of the App after such modifications will constitute your acknowledgment of the revised Privacy Policy.</string>
    <string name="modal_sheet_privacy_policy_contact_information">7. Contact Information</string>
    <string name="modal_sheet_privacy_policy_contact_information_main_text">If you have questions or concerns about this Privacy Policy or the App\'s data practices, please contact us at info@ict.ihu.gr.</string>
    <string name="modal_sheet_privacy_policy_contact_information_secondary_text">By using the "NetWatch Pro" App, you consent to the collection and use of your personal information as described in this Privacy Policy.</string>
</resources>