<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/modal_sheets_rounded_top_corners">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/our_server_status"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serres"
                android:fontFamily="@font/poppins_bold"
                android:layout_weight="9"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/modal_sheet_our_server_status_running_stop_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running"
                android:textColor="@color/primary_green"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
